--- a/.env
+++ b/.env
@@ -1,3 +1,10 @@
 DB_HOST=alochat
 DB_USER=alochat
 DB_PW=alochat2019
+CRYPT_STR=nangnangnang
+SALT_ROUNDS=12
+MAIL_USER=nangnv2641@gmail.com
+MAIL_DOMAIN=
+MAIL_PASSWORD=nangngovan2642
+SMTP_ADDR=
+MAIL_API_KEY=
