--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-session": "^1.15.6",
     "mongoose": "^5.4.13",
     "morgan": "^1.9.1",
+    "nodemailer": "^4.7.0",
     "pug": "~2.0.0-beta10",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
